portfolio/style.css
/* ... */
@media (min-width: 980px) {
  .hero {
    height: calc(100vh - 60px);
    max-height: 862px;
    min-height: 780px;
    column-gap: clamp(
      10px,
      10px + (40 - 10) * (100vw - 980px) / (1440 - 980),
      40px
    );
  }

  .hero-wrapper_main {
    flex-basis: 740px;
    padding-left: 0;
  }

  .hero-wrapper_add {
    display: block;
    flex-basis: 220px;
  }

  .hero-wrapper_intro {
    flex-basis: 280px;
  }

  .hero__img_1 {
    aspect-ratio: 1 / 1;
  }

  .hero__title {
    line-height: 1.14;
    font-size: clamp(
      68px,
      68px + (116 - 68) * (100vw - 980px) / (1440 - 980),
      116px
    );
  }
}

/* =================== ABOUT BLOCK =================== */

.about__img {
  width: 100%;
  margin-bottom: 40px;
  aspect-ratio: 1 / 1;
}

.about__img:last-of-type {
  display: none;
}

.about__text {
  margin-bottom: 40px;
}

.about__text:last-of-type {
  margin-bottom: 0;
}

@media (min-width: 769px) {
  .about__img {
    margin-bottom: 40px;
    aspect-ratio: 1 / 1;
    max-width: 440px;
    width: 100%;
  }

  .about .wrapper {
    max-height: 748px;
    columns: 2;
    column-gap: 40px;
  }
}

@media (min-width: 900px) {
  .about__img:last-of-type {
    display: block;
  }

  .about .wrapper {
    max-height: 750px;
    columns: 3 auto;
  }
}

/* =================== PORTFOLIO BLOCK =================== */

.portfolio {
  padding-bottom: 60px;
}

.portfolio .wrapper {
  padding-bottom: 0;
}

.portfolio__description {
  max-width: 360px;
  margin-bottom: 40px;
}

.portfolio__list-wrapper {
  width: 100vw;
  height: 654px;
  overflow-x: hidden;
  display: flex;
  justify-content: center;
}

.portfolio__list {
  height: 654px;
  display: flex;
  justify-content: center;
  align-items: start;
  column-gap: 20px;
}

.portfolio__item {
  max-width: 400px;
  flex-shrink: 0;
}

.portfolio__item.small {
  width: 220px;
  align-self: center;
}

.portfolio__item.small img {
  aspect-ratio: 1 / 1;
}

.portfolio__item.medium {
  width: 280px;
}

.portfolio__item.bottom {
  align-self: end;
}

.portfolio__item.small.center {
  align-self: center;
}

.portfolio__item.medium.center {
  margin-top: 120px;
}

/* =================== PRICE BLOCK =================== */

.price__description {
  margin-bottom: 40px;
}

.price__list {
  display: grid;
  grid-template-columns: repeat(auto-fit, minmax(150px, 320px));
  gap: 20px;
  justify-content: center;
}

.price__item {
  flex: 1 1 320px;
}

.card {
  box-sizing: border-box;
  height: 500px;
  display: flex;
  flex-direction: column;
  padding: 24px;
  border: 1px solid var(--bg-color-main);
  transition: var(--transition-out);
}

@media (hover: hover) {
  .card:hover {
    border-color: var(--color-accent);
    transition: var(--transition-in);
  }
}

@media (hover: none) {
  .card:active {
    border-color: var(--color-accent);
  }
}

.card__title {
  margin-bottom: 12px;
  font-family: var(--second-family);
  font-weight: 400;
  font-size: 1.25rem;
  line-height: 1.4;
  text-transform: uppercase;
}

.card__list {
  margin-bottom: 8px;
}

.card__item {
  position: relative;
  padding-left: 12px;
  margin-bottom: 4px;
}

.card__item::before {
  content: "";
  position: absolute;
  left: 0;
  top: calc(50% - 3px);
  width: 6px;
  height: 6px;
  background-color: var(--bg-color-main);
}

.card__price {
  font-family: var(--second-family);
  text-transform: uppercase;
}

.card__add-info {
  font-style: italic;
  line-height: 1.25;
  margin-bottom: 12px;
  margin-top: auto;
}

.card__btn {
  box-sizing: border-box;
  width: 100%;
  line-height: 60px;
  color: var(--text-color-main);
  background-color: var(--bg-color-main);
  padding-inline: 20px;
  font-family: var(--second-family);
  text-transform: uppercase;
  transition: var(--transition-out);
}

@media (hover: hover) {
  .card:hover .card__btn {
    color: var(--text-color-add);
    background-color: var(--color-accent);
    transition: var(--transition-in);
  }
}

@media (hover: none) {
  .card:active .card__btn {
    color: var(--text-color-add);
    background-color: var(--color-accent);
  }
}

@media (min-width: 769px) {
  .price__list {
    gap: clamp(20px, 2.78vw, 40px);
  }
}

/* =================== FAQ BLOCK =================== */

.faq__text {
  margin-bottom: 40px;
}

.faq__item {
  border-bottom: 1px solid var(--bg-color-add);
}

.faq__question {
  padding: 18px 24px 17px 0;
  font-family: var(--second-family);
  font-weight: 400;
  font-size: 1.25rem;
  line-height: 1.4;
  text-transform: uppercase;
  background-color: var(--bg-color-main);
  background-image: url("./assets/images/decor/plus.svg");
  background-repeat: no-repeat;
  background-position: top 20px right;
  background-size: 24px 24px;
  transition: var(--transition-out);
  cursor: pointer;
}

@media (hover: hover) {
  .faq__question:hover {
    color: var(--color-accent);
    background-image: url("./assets/images/decor/plus-red.svg");
    transition: var(--transition-in);
  }
}

@media (hover: none) {
  .faq__question:active {
    color: var(--color-accent);
    background-image: url("./assets/images/decor/plus-red.svg");
  }
}

.faq__item.open .faq__question {
  background-image: url("./assets/images/decor/minus.svg");
}

@media (hover: hover) {
  .faq__item.open .faq__question:hover {
    background-image: url("./assets/images/decor/minus-red.svg");
  }
}

@media (hover: none) {
  .faq__item.open .faq__question:active {
    background-image: url("./assets/images/decor/minus-red.svg");
  }
}

.faq__answer {
  margin-bottom: 19px;
  display: none;
}

.faq__item.open .faq__answer {
  display: block;
}

@media (min-width: 950px) {
  .faq .wrapper {
    display: flex;
    justify-content: space-between;
    gap: 40px;
  }

  .faq-column {
    flex: 1;
  }
}

/* =================== FOOTER =================== */

.booking .wrapper {
  padding-top: 40px;
  padding-bottom: 20px;
}
/* ... */

